// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks if param is truthy 1`] = `false`;

exports[`checks if param is truthy 2`] = `true`;

exports[`checks if param is truthy 3`] = `false`;

exports[`gets filter string (all filters) 1`] = `"form:(\\"One\\"|\\"Q\\\\\\"uo'te\`s\\") query"`;

exports[`gets filter string (no filters) 1`] = `""`;

exports[`gets form name (found) 1`] = `"One"`;

exports[`gets form name (not found) 1`] = `"Unknown"`;

exports[`gets hints (0) 1`] = `""`;

exports[`gets hints (small number) 1`] = `" (one)"`;

exports[`gets hints (too many) 1`] = `" (3)"`;

exports[`submits searches 1`] = `[MockFunction]`;

exports[`submits searches 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "?foo=bar&search=foo",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`submits searches 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "?foo=bar",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`submits searches 4`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "?",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;
